@startuml
skinparam classAttributeIconSize 0

class Question {
    - id : int
    - libelleQuestion : string
}

class Reponse {
    - id : int
    - reponse : string
    - isTrue : bool
}

class Categorie {
    - id : int
    - libelle : string
}

Categorie"1..1"--"0..*"Question
Reponse"1..*"--"1..1"Question
@enduml